# SPDX-FileCopyrightText: 2021 The meson-python developers
#
# SPDX-License-Identifier: GPL

[build-system]
build-backend = 'mesonpy'
backend-path = ['.']
requires = [
  'meson >= 0.63.3; python_version < "3.12"',
  'meson >= 1.2.3; python_version >= "3.12"',
  'pyproject-metadata >= 0.7.1',
  'tomli >= 1.0.0; python_version < "3.11"',
  "pdm-backend", 
  "meson @ git+https://github.com/robtaylor/meson@homebrew-fixes",  
  "ninja", 
  "meson-python == 0.13.2", 
  "cmake", 
  "dunamai",
]

[project]
name = "coriolis"
description = "Place and Route for semiconductors"
readme = "README.rst"
authors = [ { name = "Coriolis EDA Contributers" } ]
dynamic = []
requires-python = ">= 3.8.1"
dependencies = []
maintainers = [
  { name = 'Mazher Iqbal', email = 'mazher.iqbal@lip6.fr' },
]

version = "2.5.5"
keywords = [
    "packaging",
    "dependency",
    "workflow",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."] 
include = [
  "COPYRIGHT.rst",
  "LICENSE.rst",
  "README.rst",
  "SUPPORT.rst",
  "Seabreeze",
  "anabatic",
  "bootstrap",
  "bora",
  "builder.py",
  "coloquinte",
  "crlcore",
  "cumulus",
  "equinox",
  "etesian",
  "flute",
  "foehn",
  "hurricane",
  "ispd",
  "karakaze",
  "katana",
  "lefdef",
  "oroshi",
  "pdm.lock",
  "pyproject.toml",
  "solstice",
  "stratus1",
  "tramontana",
  "tutorial",
  "unicorn",
  "unittests",
]


[project.license]
text = "GPL"

[project.urls]
homepage = "https://github.com/lip6/coriolis"
repository = "https://github.com/lip6/coriolis"


[tool.cibuildwheel.linux]
skip = ["cp36-*", "cp37-*", "pp*"]
build-frontend = "build"
before-all = '''
 yum -y install epel-release
 yum repolist
 pip install "pillow==10.0.1"
 yum install -y \
 qt5-qtbase-devel qt5-qtsvg-devel \
 rapidjson-devel bison flex doxygen bzip2-devel flex-devel \
 boost-devel \
 boost-python boost-filesystem \
 boost-regex  boost-wave \
 python36-devel libxml2-devel \
 qwt-devel \
 ccache \
 eigen3-devel \
 wget
 wget http://lemon.cs.elte.hu/pub/sources/lemon-1.3.1.tar.gz; tar -xzf lemon-1.3.1.tar.gz; cd lemon-1.3.1; mkdir build; cd build; cmake ..; make install; cd ../..
'''

[tool.pdm.version]
source = "scm"
getter = "_build_utils.version"

[tool.pdm.dev-dependencies]
doc = [
    "pelican",
    "pelican-pdf",
    "docutils >= 0.20",
    "markupsafe >= 2.0.0"
]
dev = [
    "meson @ git+https://github.com/robtaylor/meson@homebrew-fixes",
    "ninja",
    "meson-python == 0.13.2",
    "cmake",
    "dunamai"
]

test = [
    "pytest>=7.4.2",
]



[tool.pdm]
plugins = [
    "pdm-dotenv",
]
